works but only checks for 'power' when coloring boxes

--- a/template/game.html
+++ b/template/game.html
@@ -81,7 +81,7 @@
         // Function to handle a guess for the current attempt and check if the game is over
         function makeGuess() {
             var guess = "";
-            //var secret_word = "power";
+            var secret_word = "power";
             // Iterate through input boxes for the current attempt and construct the guess
             $(".current-attempt .letter").each(function(index) {
                 var letterInput = $(this);
